--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "three": "^0.156.0"
+    "three": "^0.156.0",
+    "three-projected-material": "^2.2.2"
   }
 }
